# nano_quant_skills

./: .gitignore  README.md  example_config.yaml  pyproject.toml
2min-company-analysis/: README.md
2min-company-analysis/ask-q1-industry-prospect/: SKILL.md
2min-company-analysis/ask-q2-moat/: SKILL.md
2min-company-analysis/ask-q3-management/: SKILL.md
2min-company-analysis/ask-q4-financial-integrity/: SKILL.md
2min-company-analysis/ask-q5-market-position/: SKILL.md
2min-company-analysis/ask-q6-business-model/: SKILL.md
2min-company-analysis/ask-q7-risk-factors/: SKILL.md
2min-company-analysis/ask-q8-future-plan/: SKILL.md
look-01-profit-quality/: SKILL.md
look-01-profit-quality/scripts/: common.py  (+1 more)
look-05-balance-sheet-health/: SKILL.md
look-06-input-output-efficiency/: SKILL.md
look-07-roe-capital-return/: SKILL.md
nano-search-mcp/: README.md  config.example.yaml
nano_quant_skills/: __init__.py
seven-look-eight-question/: SKILL.md
tushare-duckdb-sync/: README.md  SKILL.md
tushare_sync_scripts/: README.md  bootstrap.sh  common.py  run_all.py  run_all.sh  run_financial_period_overwrite.py  run_financial_period_overwrite.sh  run_snapshot_refresh.py  run_snapshot_refresh.sh  run_trade_date_incremental.py  run_trade_date_incremental.sh  runner.py
tushare_to_clickhouse/: README.md  pyproject.toml
tushare_to_clickhouse/registry/: full_sync_registry.yaml
tushare_to_clickhouse/tushare_to_clickhouse/: __init__.py  cli.py  clickhouse_client.py  config.py  quality_checker.py  registry.py  schema_manager.py  sync_engine.py  tushare_client.py
(+72 files in other folders)
